realizado algumas alterações

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
         <img class="logo" src="./img/preview.jpg" alt="jaspion">
         <nav>
             <ul class="menu">
-                <li><a href="#inicio">O que é?</a></li>
                 <li><a href="#sentai">Super Sentai</a></li>
                 <li><a href="#hero">Metal Hero</a></li>
                 <li><a href="#kaiju">Kaiju</a></li>
-                <li><a href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/pages/indications.html">Indicações</a></li>
+                <li><a class="botao" href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/pages/indications.html">Indicações</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +47,7 @@
             <img class="img__conteudo" src="./img/image-w1280.jpg" alt="kaiju">
         </section>
         <h2>Considerações Finais</h2>
-        <p>A história é muito rica em detalhes e cheias de nuances, vale ressaltar que é uma baita experiência cinematográfica e fica a recomendação de tudo que foi escrito até o momento, desde já agradeço o seu tempo e lhe desejo tudo de bom nesta jornada que chamamos de vida!</p>
+        <p>A história é muito rica em detalhes e cheias de nuances, vale ressaltar que é uma baita experiência cinematográfica e fica a recomendação de tudo que foi escrito até o momento desde já agradeço o seu tempo e lhe desejo tudo de bom nesta jornada que chamamos de vida!</p>
     </main>
     <footer>
         &copy; 2023 Matheus Alves. Todos os direitos reservados.
