--- a/pages/indications.html
+++ b/pages/indications.html
@@ -15,7 +15,7 @@
                 <li><a href="#kamen">Kamen Rider Kuuga</a></li>
                 <li><a href="#hero">Ultraman Orb</a></li>
                 <li><a href="#kaiju">Jiban</a></li>
-                <li><a href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/index.html">Tokusatsu</a></li>
+                <li><a class="botao" href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/index.html">Tokusatsu</a></li>
             </ul>
         </nav>
     </header>
