Realizado algumas alterações na intenção de deixar responsivo ao mobile

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./img/preview.jpg" alt="jaspion">
-        <nav>
-            <ul class="menu">
-                <li><a href="#sentai">Super Sentai</a></li>
-                <li><a href="#hero">Metal Hero</a></li>
-                <li><a href="#kaiju">Kaiju</a></li>
-                <li><a class="botao" href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/pages/indications.html">Indicações</a></li>
-            </ul>
-        </nav>
+
+        <nav class="menu">
+            <label class="menu__logo" for="hamb-menu" >
+            &#9776
+        </label>
+        <input type="checkbox" id="hamb-menu">
+        <ul class="menu__itens">
+            <li class="menu__item"><a class="menu__link" href="#sentai">Sentai</a></li>
+            <li class="menu__item"><a class="menu__link" href="#hero">Metal Hero</a></li>
+            <li class="menu__item"><a class="menu__link" href="#kaiju">Kaiju</a></li>
+            <li class="menu__item"><a class="menu__link" href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/pages/indications.html">indicações</a></li>
+        </ul>
+    </nav>
+    
     </header>
     <main class="blog">
         <section>
