--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li class="menu__item"><a class="menu__link" href="#sentai">Sentai</a></li>
             <li class="menu__item"><a class="menu__link" href="#hero">Metal Hero</a></li>
             <li class="menu__item"><a class="menu__link" href="#kaiju">Kaiju</a></li>
-            <li class="menu__item"><a class="menu__link" href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/pages/indications.html">indicações</a></li>
+            <li class="menu__item"><a class="menu__link" href="./pages/indications.html">indicações</a></li>
         </ul>
     </nav>
     
