--- a/pages/indications.html
+++ b/pages/indications.html
@@ -19,7 +19,7 @@
             <li class="menu__item"><a class="menu__link" href="#sentai">Kamen Rider Kuuga</a></li>
             <li class="menu__item"><a class="menu__link" href="#hero">Ultraman Orb</a></li>
             <li class="menu__item"><a class="menu__link" href="#kaiju">Jiban</a></li>
-            <li class="menu__item"><a class="menu__link" href="file:///C:/Users/matheus.alnovo/Documents/projetos/tokusatsu/index.html">Tokusatsu</a></li>
+            <li class="menu__item"><a class="menu__link" href="../index.html">Tokusatsu</a></li>
         </ul>
     </nav>
     </header>
