--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>A história é muito rica em detalhes e cheias de nuances, vale ressaltar que é uma baita experiência cinematográfica e fica a recomendação de tudo que foi escrito até o momento desde já agradeço o seu tempo e lhe desejo tudo de bom nesta jornada que chamamos de vida!</p>
     </main>
     <footer>
-        &copy; 2023 Matheus Alves. Todos os direitos reservados.
+        Matheus Alves. Todos os direitos reservados &copy;2023.
     </footer>
     <script src="https://kit.fontawesome.com/fcc381a96a.js" crossorigin="anonymous"></script>
 </body>
