--- a/pages/indications.html
+++ b/pages/indications.html
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2023 Matheus Alves. Todos os direitos reservados.
+         Matheus Alves. Todos os direitos reservados &copy;2023.
     </footer>
     <script src="https://kit.fontawesome.com/fcc381a96a.js" crossorigin="anonymous"></script>
 </body>
